<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="@dimen/m"
        tools:context=".ui.login.LoginFragment">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/huge_text_size"
            android:text="@string/email" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:padding="@dimen/xs"
            android:hint="@string/enter_your_email"
            android:autofillHints=""
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m"
            android:textSize="@dimen/huge_text_size"
            android:text="@string/password" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:background="@drawable/edit_text_bg"
            android:padding="@dimen/xs"
            android:inputType="textPassword"
            android:autofillHints="" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxs"
            android:text="@string/login"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginWithGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxs"
            app:icon="@drawable/ic_google"
            android:text="@string/login_with_google"/>

        <TextView
            android:id="@+id/btnLinkRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxs"
            android:textColor="@color/blue"
            android:text="@string/register"/>


    </LinearLayout>
</layout>
